fix: Floating-ui should handle visibility and pointer-events.

--- a/src/assets/styles/_floating-ui.scss
+++ b/src/assets/styles/_floating-ui.scss
@@ -12,8 +12,7 @@ $floating-ui-default-z-index: 900;
   .calcite-floating-ui-anim {
     position: relative;
     transition: var(--calcite-floating-ui-transition);
-    visibility: hidden;
-    transition-property: transform, visibility, opacity;
+    transition-property: transform, opacity;
     opacity: 0;
     box-shadow: $shadow-2;
     @apply rounded z-default;
@@ -22,7 +21,6 @@ $floating-ui-default-z-index: 900;
 
 @mixin floatingUIAnimActive {
   opacity: 1;
-  visibility: visible;
   transform: translate(0);
 }
 
@@ -83,16 +81,12 @@ $floating-ui-default-z-index: 900;
 }
 
 @mixin floatingUIWrapper {
-  visibility: hidden;
-  pointer-events: none;
   inline-size: 0;
   block-size: 0;
   overflow: hidden;
 }
 
 @mixin floatingUIWrapperActive {
-  pointer-events: initial;
-  visibility: visible;
   inline-size: unset;
   block-size: unset;
   overflow: unset;
